kubernetes/development/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
      - name: frontend-pod
        image: ${ECR}/frontend
        resources:
          limits:
            memory: "400Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
